// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type.js { Heading } <Heading.L.Medium> matches snapshot 1`] = `
<h4
  className="Heading L UntitledSans Medium500 Black"
>
  Lorem ipsum
</h4>
`;

exports[`Type.js { Heading } <Heading.L.Regular> matches snapshot 1`] = `
<h4
  className="Heading L UntitledSans Regular400 Black"
>
  Lorem ipsum
</h4>
`;

exports[`Type.js { Heading } <Heading.M.Medium> matches snapshot 1`] = `
<h5
  className="Heading M UntitledSans Medium500 Black"
>
  Lorem ipsum
</h5>
`;

exports[`Type.js { Heading } <Heading.M.Regular> matches snapshot 1`] = `
<h5
  className="Heading M UntitledSans Regular400 Black"
>
  Lorem ipsum
</h5>
`;

exports[`Type.js { Heading } <Heading.S.Medium> matches snapshot 1`] = `
<h6
  className="Heading S UntitledSans Medium500 Black"
>
  Lorem ipsum
</h6>
`;

exports[`Type.js { Heading } <Heading.S.Regular> matches snapshot 1`] = `
<h6
  className="Heading S UntitledSans Regular400 Black"
>
  Lorem ipsum
</h6>
`;

exports[`Type.js { Heading } <Heading.XL.Medium> matches snapshot 1`] = `
<h3
  className="Heading XL UntitledSans Medium500 Black"
>
  Lorem ipsum
</h3>
`;

exports[`Type.js { Heading } <Heading.XL.Regular> matches snapshot 1`] = `
<h3
  className="Heading XL UntitledSans Regular400 Black"
>
  Lorem ipsum
</h3>
`;

exports[`Type.js { Heading } <Heading.XS.Medium> matches snapshot 1`] = `
<h6
  className="Heading XS UntitledSans Medium500 Black"
>
  Lorem ipsum
</h6>
`;

exports[`Type.js { Heading } <Heading.XS.Regular> matches snapshot 1`] = `
<h6
  className="Heading XS UntitledSans Regular400 Black"
>
  Lorem ipsum
</h6>
`;

exports[`Type.js { Heading } <Heading.XXL.Americane> matches snapshot 1`] = `
<h2
  className="Heading XXL Americane Black900 Black"
>
  Lorem ipsum
</h2>
`;

exports[`Type.js { Heading } <Heading.XXL.Medium> matches snapshot 1`] = `
<h2
  className="Heading XXL UntitledSans Medium500 Black"
>
  Lorem ipsum
</h2>
`;

exports[`Type.js { Heading } <Heading.XXL.Regular> matches snapshot 1`] = `
<h2
  className="Heading XXL UntitledSans Regular400 Black"
>
  Lorem ipsum
</h2>
`;

exports[`Type.js { Heading } <Heading.XXXL.Americane> matches snapshot 1`] = `
<h1
  className="Heading XXXL Americane Black900 Black"
>
  Lorem ipsum
</h1>
`;

exports[`Type.js { Heading } <Heading.XXXL.Medium> matches snapshot 1`] = `
<h1
  className="Heading XXXL UntitledSans Medium500 Black"
>
  Lorem ipsum
</h1>
`;

exports[`Type.js { Heading } <Heading.XXXL.Regular> matches snapshot 1`] = `
<h1
  className="Heading XXXL UntitledSans Regular400 Black"
>
  Lorem ipsum
</h1>
`;

exports[`Type.js { Text } <Text.L.Medium> matches snapshot 1`] = `
<div
  className="Text L UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.L.Regular> matches snapshot 1`] = `
<div
  className="Text L UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.M.Medium> matches snapshot 1`] = `
<div
  className="Text M UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.M.Regular> matches snapshot 1`] = `
<div
  className="Text M UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.S.Medium> matches snapshot 1`] = `
<div
  className="Text S UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.S.Regular> matches snapshot 1`] = `
<div
  className="Text S UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XL.Medium> matches snapshot 1`] = `
<div
  className="Text XL UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XL.Regular> matches snapshot 1`] = `
<div
  className="Text XL UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XS.Medium> matches snapshot 1`] = `
<div
  className="Text XS UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XS.Regular> matches snapshot 1`] = `
<div
  className="Text XS UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XXL.Medium> matches snapshot 1`] = `
<div
  className="Text XXL UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XXL.Regular> matches snapshot 1`] = `
<div
  className="Text XXL UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XXXL.Medium> matches snapshot 1`] = `
<div
  className="Text XXXL UntitledSans Medium500 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`Type.js { Text } <Text.XXXL.Regular> matches snapshot 1`] = `
<div
  className="Text XXXL UntitledSans Regular400 Black"
>
  Lorem ipsum dolor sit amet
</div>
`;
